<resources>
    <string name="app_name">MTG Life Counter</string>
    <string name="main_button_start">Start Game</string>
    <string name="player_selection_button_continue">Continue</string>
    <string name="player_selection_tittle">Set Players</string>
    <string name="setup_game_tittle">Setup the Game</string>
    <string name="setup_game_starting_life">Starting Life</string>
    <string name="setup_game_commander">Commander</string>
    <string name="setup_game_play">Play</string>
    <string name="game_touch_to_start">Touch to Start</string>
    <string name="setup_game_vanguard">Vanguard</string>
    <string name="names_set_invokers">Set Invokers</string>
    <string name="names_name_entry">Name</string>
    <string name="names_skip">Skip</string>
    <string name="names_p3">P3</string>
    <string name="names_p4">P4</string>
    <string name="names_p5">P5</string>
    <string name="names_p6">P6</string>
    <string name="names_p2">P2</string>
    <string name="names_p1">P1</string>
    <string name="commander_layout_bOk">OK</string>
    <string name="main_icon_todo">TODO</string>
    <string name="starting_life">20</string>
    <string name="setup_game_player_names">Display Invokers</string>
    <string name="names_max_5_characters_recomended">(Max 5 Characters Recommended)</string>
    <string name="setup_game_minimun_2_players">(Minimum 2 players)</string>
    <string name="dev_info">Contact me at: atlas.dev.public@gmail.com</string>
</resources>
