<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.NamesActivity">

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:onClick="pressed_continue"
        android:text="@string/player_selection_button_continue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/names_layout" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/names_set_invokers"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/names_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/names_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8">

        <EditText
            android:id="@+id/player_name_2"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:enabled="false"
            android:inputType="textPersonName"
            android:text="@string/names_p2"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/player_name_4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/player_name_1"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/player_name_3"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:enabled="false"
            android:inputType="textPersonName"
            android:text="@string/names_p3"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/player_name_5"
            app:layout_constraintEnd_toStartOf="@+id/player_name_4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/player_name_1" />

        <EditText
            android:id="@+id/player_name_4"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:enabled="false"
            android:inputType="textPersonName"
            android:text="@string/names_p4"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/player_name_6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/player_name_3"
            app:layout_constraintTop_toBottomOf="@+id/player_name_2" />

        <EditText
            android:id="@+id/player_name_6"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:enabled="false"
            android:inputType="textPersonName"
            android:text="@string/names_p6"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/player_name_5"
            app:layout_constraintTop_toBottomOf="@+id/player_name_4" />

        <EditText
            android:id="@+id/player_name_5"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:enabled="false"
            android:inputType="textPersonName"
            android:text="@string/names_p5"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/player_name_6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/player_name_3" />

        <EditText
            android:id="@+id/player_name_1"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:enabled="false"
            android:inputType="textPersonName"
            android:text="@string/names_p1"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/player_name_3"
            app:layout_constraintEnd_toStartOf="@+id/player_name_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>